--- a/index.html
+++ b/index.html
@@ -24,21 +24,23 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Python Projects</a></li>
-							<li><a href="generic.html">Data Science</a></li>
-							<li><a href="elements.html">LinkedIn</a></li>
+							<li><a href="landing.html">Data Science</a></li>
+							<li><a href="elements.html">Machine Learning</a></li>
+							<li><a href="generic.html">Python Projects</a></li>
 						</ul>
+						<!--
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
+					-->
 					</nav>
 
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is SHYAM</h1>
+								<h1>Hi, my name is SHYAM ADSUL</h1>
 							</header>
 							<div class="content">
 								<p>This is my portfolio site.<br />
@@ -60,8 +62,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">GitHub</a></h3>
-										<p>Welcome to GitHub world.</p>
+										<h3><a href="landing.html" class="link">Data Science</a></h3>
+										<p>Welcome to Data Science.</p>
 									</header>
 								</article>
 								<article>
@@ -69,8 +71,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">LinkedIn</a></h3>
-										<p>Connect me here and share values with me.</p>
+										<h3><a href="elements.html" class="link">Machine Learning</a></h3>
+										<p>Welcome to contribute in machine learning.</p>
 									</header>
 								</article>
 								<article>
@@ -78,8 +80,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Instagram</a></h3>
-										<p>Follow me on instagram.</p>
+										<h3><a href="generic.html" class="link">Python Projects</a></h3>
+										<p>Start Contributing to python projects with me.</p>
 									</header>
 								</article>
 								<article>
@@ -87,7 +89,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Facebook</a></h3>
+										<h3><a href="https://www.facebook.com/adsulshyam0000/" class="link" class="link">Facebook</a></h3>
 										<p>Find me here on Facebbok</p>
 									</header>
 								</article>
@@ -96,8 +98,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Data Science</a></h3>
-										<p> Get insights of my blogs on data scienceI</p>
+										<h3><a href="https://www.instagram.com/adsul_shyam/" class="link">Instagram</a></h3>
+										<p> Follow on instagram</p>
 									</header>
 								</article>
 								<article>
@@ -105,17 +107,17 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Machine Learning</a></h3>
-										<p>Enter here into AI World.</p>
+										<h3><a href="https://www.linkedin.com/in/adsul-shyam-apcoer/" class="link">LinkedIn</a></h3>
+										<p>Connect to me on linkedIn</p>
 									</header>
 								</article>
 							</section>
-
-						<!-- Two -->
+						<!--
+						 
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Competitive Programming</h2>
+										<h2>Competitive/h2>
 									</header>
 									<p>Get involved into open source by contributing with me for developing competitive programming questions anser.</p>
 									<ul class="actions">
@@ -123,12 +125,13 @@
 									</ul>
 								</div>
 							</section>
-
+						-->
 					</div>
 
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
+							<!--
 							<section>
 								<form method="post" action="#">
 									<div class="fields">
@@ -150,6 +153,8 @@
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
 								</form>
+
+							-->
 							</section>
 							<section class="split">
 								<section>
@@ -164,7 +169,6 @@
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
 										<span>+91 8999163442</span>
-										<span>+91 9730840155 </span>
 									</div>
 								</section>
 								<section>
