--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
 								</form>
-								
+
 							</section>
 							<section class="split">
 								<section>
@@ -194,7 +194,7 @@
 								<li><a href="https://www.facebook.com/adsulshyam0000/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; shyam adsul</li><li>Design by: shyam adsul></li>
+								<li>&copy; shyam adsul</li><li>Design by: Shyam Adsul></li>
 							</ul>
 						</div>
 					</footer>
